samples/_failures_safe/1761351356_ae2114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbfc27fd.c: In function ‘main’:
./samples/SAFE/__tmp_cbfc27fd.c:178:5: error: expected expression at end of input
  178 |     int j =
      |     ^~~
./samples/SAFE/__tmp_cbfc27fd.c:178:5: error: expected declaration or statement at end of input
